# Ancestors

./: .gitignore  ChangeLog.md  Graph.cabal  LCA.cabal  README.md  ancestors.cabal  package.yaml
app/: Main.hs
src/: Graph.hs  LCA.hs  Main.hs
test/: ArbitraryGraph.hs  BigGraph.hs  BigTree.hs  SampleTree.hs  Spec.hs
