name:                Graph
version:             0.1.0.0
synopsis:            CS3016 Exercise One
license:             BSD3
license-file:        LICENSE
author:              Peter
maintainer:          Queallp@tcd.ie
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graph
  build-depends:       base >= 4.7 && < 5
                       , containers
  default-language:    Haskell2010
  
test-suite Main
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  x-uses-tf: true
  build-depends:  base,
                  Graph,
                  tasty,
                  tasty-quickcheck,
                  tasty-hunit,
                  containers
  hs-source-dirs: test, src
  default-language: Haskell2010
